--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-   
-
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^5.0.7",
@@ -12,24 +10,7 @@
     "react-scripts": "2.1.3",
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "styled-components": "^4.1.3",
-
-
-    
-    "cross-env": "^5.2.0",
-    "dotenv": "^6.2.0",
-    "algoliasearch": "^3.30.0",
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.4",
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0",
-    "mongoose": "^5.2.9",
-    "mongoose-algolia": "^1.7.1",
-    "mongoose-deep-populate": "^3.1.1",
-    "morgan": "^1.9.0",
-    "multer": "^1.3.1",
-    "request": "^2.88.0"
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
