--- a/package.json
+++ b/package.json
@@ -4,12 +4,29 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5"
+    "cross-env": "^5.2.0",
+    "dotenv": "^6.2.0",
+    "algoliasearch": "^3.30.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "mongoose": "^5.2.9",
+    "mongoose-algolia": "^1.7.1",
+    "mongoose-deep-populate": "^3.1.1",
+    "morgan": "^1.9.0",
+    "multer": "^1.3.1",
+    "request": "^2.88.0"
   }
 }
