--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
     "styled-components": "^4.1.3"
+ 
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,5 +27,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:5000"
 }
