--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "mongoose-deep-populate": "^3.1.1",
     "morgan": "^1.9.0",
     "multer": "^1.3.1",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "concurrently": "^3.6.0"
+
   }
 }
